feat: update about page

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -403,9 +403,10 @@ ul.task-list input[type="checkbox"] {
 
 .social {
   text-align: center;
+  margin-top: 1.5rem;
 
   .contact-icons {
-    font-size: 4rem;
+    font-size: 2rem;
 
     a {
       img {
